[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/scripts/Task.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/button.gd" type="Script" id=2]

[node name="Task" type="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 105.0
margin/bottom = 264.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 105.0
margin/bottom = 264.0
alignment = 0

[node name="TaskDone" type="CheckBox" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Title"
flat = false
align = 0

[node name="LBL_Summary" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 27.0
margin/right = 97.0
margin/bottom = 41.0
text = "Short Summary"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Comment" type="RichTextLabel" parent="VBoxContainer"]

rect/min_size = Vector2( 20, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 45.0
margin/right = 97.0
margin/bottom = 85.0
bbcode/enabled = true
bbcode/bbcode = "Comments"
visible_characters = -1
percent_visible = 1.0

[node name="LBL_Date" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 89.0
margin/right = 97.0
margin/bottom = 103.0
text = "Date:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LBL_Type" type="Label" parent="VBoxContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 85.0
margin/right = 97.0
margin/bottom = 99.0
text = "Type:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LBL_Cycles" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 107.0
margin/right = 97.0
margin/bottom = 121.0
text = "Cycles: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LBL_Difficulty" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 125.0
margin/right = 97.0
margin/bottom = 139.0
text = "Difficulty: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BAR_Difficulty" type="ProgressBar" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 143.0
margin/right = 97.0
margin/bottom = 159.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
percent/visible = true

[node name="LBL_Reward" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 163.0
margin/right = 97.0
margin/bottom = 177.0
text = "Reward:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BTN_Edit" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 181.0
margin/right = 97.0
margin/bottom = 201.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Edit"
flat = false

[node name="BTN_Expand" type="CheckBox" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 205.0
margin/right = 97.0
margin/bottom = 228.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Expand"
flat = false
align = 0
script/script = ExtResource( 2 )

[node name="LBL_SubTasks" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 232.0
margin/right = 97.0
margin/bottom = 246.0
text = "Sub tasks: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LBL_Categories" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = 97.0
margin/bottom = 264.0
text = "Categories: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="VBoxContainer/TaskDone" to="." method="_on_TaskDone_pressed"]


